--- a/index.html
+++ b/index.html
@@ -1,34 +1,21 @@
-<html lang="pt-br"></html>
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;900&display=swap" rel="stylesheet">
-    <title>A escolha difícil do Bob.</title>
+    <title>AluraBooks</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+    
 <body>
-<main>
-    <div class="passo" id="passo-0">
-        <p>O vagão do metrô estava quase vazio naquela noite. O Bob, cansado depois de um longo dia de trabalho entediante, afundou no banco com um suspiro, tentando relaxar. As luzes do metrô piscavam levemente, criando um ambiente sombrio e quase desolador.
-
-        Então, um homem entrou no vagão. Ele estava usando um capuz preto que ocultava seu rosto na penumbra. O Bob mal teve tempo de reparar no estranho até que o homem se aproximou dele. O homem de capuz estendeu a mão, segurando dois chicletes: um azul e um vermelho.
-
-        “Escolha um, mas se você pegar o chiclete vermelho, você se torna o homem mais rico das galáxias, ou se você pegar o chiclete azul, você continua na vida miserável”, disse o homem com uma voz baixa e abafada. Seu tom era neutro, mas havia algo desconcertante em sua presença, como se ele não fosse apenas uma pessoa comum.
-
-        O Bob olhou para os chicletes com desconfiança.</p>
-        <button class="btn-proximo" data-proximo="1">Pegar o chiclete vermelho e comer</button>
-        <button class="btn-proximo" data-proximo="2">Pegar o chiclete azul e comer</button>  
-    </div>
-    <div class="passo" id="passo-1">
-        <p>Bob estava cansado após um longo dia e decidiu mastigar um chiclete vermelho enquanto viajava no trem do metrô à noite. No dia seguinte, ao acordar, descobriu que havia se tornado o homem mais rico da galáxia, sua fortuna surgida do nada. Mas enquanto ele tentava entender a magnitude de sua nova vida, um homem de capuz preto apareceu novamente, como se tivesse retornado para reivindicar algo ou cumprir um papel misterioso. O homem de capuz escondia seu rosto, mas seu olhar penetrante parecia sugerir que havia muito mais por trás desse destino inesperado. Bob estava prestes a descobrir que seu simples ato de mastigar chiclete tinha desencadeado uma série de eventos que desafiariam seu entendimento sobre riqueza, poder e destino.</p>
-        <button class="btn-proximo" data-proximo="3">Investigar</button>
-        <button class="btn-proximo" data-proximo="4">Ir atrás do homem de capuz preto</button>  
-    </div>
-</main>
+    <head class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/logo.svg" alt="logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svg"></a>
+        
+    </head>
 </body>
+
 </html>
